--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@types/react-text-mask": "^5.4.11",
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.11",
@@ -20,10 +21,15 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-input-mask": "^2.0.4",
+    "react-input-masked": "^1.0.4",
+    "react-number-format": "^5.2.2",
+    "react-text-mask": "^5.5.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/react-input-mask": "^3.0.2",
     "tailwind-clip-path": "^1.0.0"
   }
 }
